<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ReConnect</string>
    <string name="crown_position">The highest chakra represents our ability to be fully connected spiritually</string>
    <string name="third_eye_position">forehead: above/between eyebrows</string>
    <string name="throat_position">Base of neck/lower chin</string>
    <string name="heart_position">Centre of chest (not heart on left)</string>
    <string name="solar_plexus_position">upper naval/base of sternum</string>
    <string name="sacral_position">upper naval/base of sternum</string>
    <string name="root_position">between anus &amp; genitals/base of spine</string>

    <string name="crown_tips"><![CDATA[spirituality & peace, transcendence of self/selflessness, expansion of consciousness, miracles & manifestation]]></string>
    <string name="third_eye_tips">inner wisdom and powerful intuition, clarity of inner vision, psychic ability, own insights, open to unknowns</string>
    <string name="throat_tips"><![CDATA[good communication, ability to express self fully, truthful & authentic self, inner & outer self matches]]></string>
    <string name="heart_tips"><![CDATA[Love for self & others, acceptance of self & others, compassion & forgiveness, genuine relationships]]></string>
    <string name="solar_plexus_tips"><![CDATA[self – respect, power, endurance, motivation, effectiveness, fearlessness, true self, confidence & esteem]]></string>
    <string name="sacral_tips"><![CDATA[emotional balance, sexual (sexuality) balance, allowance of pleasure in life, trusting & in touch with self]]></string>
    <string name="root_tips"><![CDATA[grounding, safety & security, stability in life, stillness & peace, physical health & fitness, self-care and capability]]></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="seeguide">See guidelines</string>
    <string name="moreinfo">More Info?</string>
    <string name="silence_day_info"><![CDATA[Choose a convenient day to practice Silence/Non-Talking You CAN still do the usual things (perhaps not job) but will just be doing things without the added talking.]]></string>
    <string name="silence_day">Silence Day</string>

        
    <string name="lblAcc">Select Account Type</string>
        
    <string name="lblSubAcc">Select Account Head</string>
     
        
    <string-array name="acc_type">
                
        <item>Income</item>
                
        <item>Expense</item>
            
    </string-array>

     
    <string-array name="chakras_array">
                
        <item>Crown</item>
                
        <item>Third Eye</item>
                
        <item>Throat</item>
                
        <item>Heart</item>
                
        <item>Sacral</item>
                
        <item>Solar Plexus</item>
                
        <item>Root</item>
            
    </string-array>

    <string-array name="crown_mantras_array">
        <item>1. I am deeply connected to unseen powers</item>
        <item>2. I am free from all limitations of life</item>
        <item>3.	I ‘tune in’ and receive energy at any time</item>
        <item>4.	There is no trying because I create what I want</item>
        <item>5.	I experience high states of consciousness</item>
        <item>6.	I am in a natural state of gratitude</item>
        <item>7.	Magical coincidences happen regularly</item>
        <item>8.	I am a glorious and radiant being</item>
        <item>9.	I don’t need answers: they come with ease</item>
        <item>10.	I control my destiny and manifest my desires</item>
    </string-array>

    <string-array name="third_eye_mantras_array">
        <item>1.	I see everything around me clearly</item>
        <item>2.	I access answers from within</item>
        <item>3.	I am deeply silent and reflective</item>
        <item>4.	I have a strong connection to my inner self</item>
        <item>5.	My gut feelings and inner wisdom inform me</item>
        <item>6.	My intuition guides and protects me</item>
        <item>7.	I experience stillness and peace</item>
        <item>8.	I have all the answers within</item>
        <item>9.	I am guided and protected</item>
        <item>10.	My potential flows freely</item>
    </string-array>
     
    <string-array name="throat_mantras_array">
        <item>1.	My voice resonates through me</item>
        <item>2.	I speak freely and expressively </item>
        <item>3.	My body supports my voice </item>
        <item>4.	I speak from the heart</item>
        <item>5.	My thoughts and speech are clear</item>
        <item>6.	I love expressing myself fully</item>
        <item>7.	I articulate and communicate with ease</item>
        <item>8.	I consider myself equal to others</item>
        <item>9.	I speak out and am assertive</item>
        <item>10  	What I say is valuable and interesting</item>
    </string-array>
    <string-array name="heart_mantras_array">
        <item>1.	May all beings be well and happy</item>
        <item>2.	My heart is open to give and receive love</item>
        <item>3.	I emulate love and warmth to those around me </item>
        <item>4.	I have compassion and forgiveness for others</item>
        <item>5.	I feel a deep love for myself and others</item>
        <item>6.	I learn from my connection with others</item>
        <item>7.	I let it go of negativity with ease</item>
        <item>8.	Life’s challenges as great lessons</item>
        <item>9.	I am grateful for all the love in my life</item>
        <item>10.	Love is everything: I am love</item>
    </string-array>
    <string-array name="solar_plexus_mantras_array">
        <item>1.	I am fearless and embrace the unknown</item>
        <item>2.	I take action and achieve what I want </item>
        <item>3.	I own who I am</item>
        <item>4.	I have a clear mind and strong character</item>
        <item>5.	I am assertive and stand firm</item>
        <item>6.	I am respected and valued</item>
        <item>7.	I am perfect in my uniqueness</item>
        <item>8.	I choose my own thoughts and behaviours</item>
        <item>9.	I honour and respect myself</item>
        <item>10.	I emulate personal power</item>
    </string-array>
    <string-array name="sacral_mantras_array">
        <item>1.	I embrace my sexuality</item>
        <item>2.	I am magnetic and attractive </item>
        <item>3.	I have intimate connections with others</item>
        <item>4.	My emotions are balanced and stable</item>
        <item>5.	I meet my desires</item>
        <item>6.	Life is sweet, perfect and fulfilling</item>
        <item>7.	My life is filled with pleasure and joy</item>
        <item>8.	I have amazing relationships</item>
        <item>9.	I express my desires</item>
        <item>10.	I am passionate and creative </item>
    </string-array>
    <string-array name="root_mantras_array">
        <item>1.	I am grounded and self-contained</item>
        <item>2.	I receive riches &amp; abundance from life </item>
        <item>3.	I am surrounded by a blanket of love</item>
        <item>4.	I am safe and secure in my life</item>
        <item>5.	My body is important to me</item>
        <item>6.	I value my body, my health and my diet </item>
        <item>7.	I know my needs and meet my needs</item>
        <item>8.	I am protected, nourished and soothed</item>
        <item>9.	I can cope with any situation</item>
        <item>10.	I am strong and capable</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="choos">Choose Sign</string>
    <string name="insilence">In Silence</string>
    <string name="iopted">I’ve opted for a Silent - Non-Talking day</string>
    <string name="ipractis">I’m practising being “In Silence” today</string>
    <string name="irefraining">I’m refraining from talking today</string>
    <string name="ikeep">I’m keeping communication to the minimum today please respect this by not inviting conversation</string>
    <string name="talking"><![CDATA[Talking & Communicating burns energy, so I am taking a break from this]]></string>
    <string name="mindful">I am practising Mindful Silence today</string>
    <string name="having">I am having a “Silent Retreat” day today</string>
    <string name="create">Create My Own</string>
    <string name="whychoos" tools:ignore="StringEscaping"><![CDATA[Why Choosing a Sign?
    \n This is a scripted message to show people when they forget \n (or dont know) that you are practicing silence. This saves you from having to speak.]]></string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

</resources>
