<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.william.reconnect.activities.SilenceChoseSign">


    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/silence_day_gradient" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/choose_sign"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:letterSpacing="0.01"
                android:textColor="#020202"
                android:textSize="30sp"
                android:text="@string/choos" />

            <Button
                android:id="@+id/silence_btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_sign"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:text="@string/insilence"
                android:textColor="#fff" />

            <Button
                android:id="@+id/silence_btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/silence_btn_1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:text="@string/iopted"
                android:textColor="#fff" />

            <Button
                android:id="@+id/silence_btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/silence_btn_2"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:text="@string/ipractis"
                android:textColor="#fff" />

            <Button
                android:id="@+id/silence_btn_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/silence_btn_3"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:text="@string/irefraining"
                android:textColor="#fff" />

            <Button
                android:id="@+id/silence_btn_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/silence_btn_4"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:paddingTop="7dp"
                android:text="@string/ikeep"
                android:textColor="#fff" />

            <Button
                android:id="@+id/silence_btn_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/silence_btn_5"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:padding="8dp"
                android:text="@string/talking"
                android:textColor="#fff" />

            <Button
                android:id="@+id/silence_btn_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/silence_btn_6"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:text="@string/mindful"
                android:textColor="#fff" />

            <Button
                android:id="@+id/silence_btn_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/silence_btn_7"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_rect"
                android:text="@string/having"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_create_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/silence_btn_8"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/silence_btn_create"
                android:text="CREATE MY OWN"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_silence_info"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/btn_create_sign"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="170dp"
                android:layout_marginRight="170dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon"

                />

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
